imp: deliver all cruds

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@aws-sdk/client-lambda": "^3.385.0"
+  }
 }
