--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@aws-sdk/client-lambda": "^3.385.0",
     "@babel/preset-env": "^7.22.10",
     "bcryptjs": "^2.4.3",
+    "chance": "^1.1.11",
     "jest": "^29.6.2",
     "joi": "^17.9.2",
     "mysql2": "^3.6.0",
