--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "install:layers": "bash install-layers.sh",
     "build": "npx swc src -d dist",
     "postbuild": "find ./dist -type f -name \"*.js\" -exec sh -c 'mv \"$0\" \"${0%.js}.mjs\"' {} \\;",
     "deploy:prod": "npm run build && npm run install:layers && sam deploy --parameter-overrides Stage=prod --stack-name backend-ecommerce-prod --s3-prefix backend-ecommerce-prod",
@@ -22,25 +21,21 @@
     "node": "20.5.1"
   },
   "devDependencies": {
-    "@aws-sdk/client-lambda": "^3.385.0",
-    "@babel/preset-env": "^7.22.10",
     "@swc/cli": "^0.1.63",
     "@swc/core": "^1.3.100",
+    "@swc/jest": "^0.2.29",
     "@types/aws-lambda": "^8.10.130",
     "@types/bcryptjs": "^2.4.6",
-    "aws-lambda": "^1.0.7",
-    "bcryptjs": "^2.4.3",
-    "chance": "^1.1.11",
     "jest": "^29.6.2",
-    "joi": "^17.9.2",
-    "mysql2": "^3.6.0",
-    "sinon": "^15.2.0",
-    "sqlite3": "^5.1.6",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "aws-lambda": "^1.0.7",
+    "bcryptjs": "^2.4.3",
+    "chance": "^1.1.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "mysql2": "^3.6.0",
     "typeorm": "^0.3.17"
   }
 }
