--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "build": "npx swc src -d dist",
-    "postbuild": "find ./dist -type f -name \"*.js\" -exec sh -c 'mv \"$0\" \"${0%.js}.mjs\"' {} \\;",
+    "build": "nest build -b swc",
     "deploy:prod": "npm run build && npm run install:layers && sam deploy --parameter-overrides Stage=prod --stack-name backend-ecommerce-prod --s3-prefix backend-ecommerce-prod",
     "deploy:hml": "npm run build && npm run install:layers && sam deploy --parameter-overrides Stage=hml --stack-name backend-ecommerce-hml --s3-prefix backend-ecommerce-hml",
     "deploy:dev": "npm run build && npm run install:layers && sam deploy --parameter-overrides Stage=dev --stack-name backend-ecommerce-dev --s3-prefix backend-ecommerce-dev",
@@ -17,25 +15,37 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "engines": {
-    "node": "20.5.1"
-  },
   "devDependencies": {
     "@swc/cli": "^0.1.63",
-    "@swc/core": "^1.3.100",
     "@swc/jest": "^0.2.29",
     "@types/aws-lambda": "^8.10.130",
     "@types/bcryptjs": "^2.4.6",
     "jest": "^29.6.2",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@fastify/cors": "^8.5.0",
+    "@fastify/csrf-protection": "^6.4.1",
+    "@fastify/helmet": "^11.1.1",
+    "@fastify/static": "^6.12.0",
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mongoose": "^10.0.2",
+    "@nestjs/platform-fastify": "^10.3.0",
+    "@nestjs/swagger": "^7.1.17",
+    "@nestjs/typeorm": "^10.0.1",
+    "@swc/core": "^1.3.100",
     "aws-lambda": "^1.0.7",
     "bcryptjs": "^2.4.3",
     "chance": "^1.1.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "mysql2": "^3.6.0",
+    "pg": "^8.11.3",
     "typeorm": "^0.3.17"
   }
 }
